# nonebot-plugin-sublike

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/nonebot_plugin_sublike/: __init__.py  config.py  matcher.py  models.py  scheduler.py  service.py  store.py  utils.py
tests/: conftest.py  plugin_test.py  test_subscription_flow.py
